--- a/bestAPPever/bestAPPever.csproj
+++ b/bestAPPever/bestAPPever.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddObjects.cs" />
+    <Compile Include="CreateObjects.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
