--- a/bestAPPever/bestAPPever.csproj
+++ b/bestAPPever/bestAPPever.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=8.0.13.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,6 +57,7 @@
     <Compile Include="RegLogInClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TamagochiClass.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -68,6 +69,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -81,6 +83,42 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\body-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\body-2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\body-3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\body-4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\head-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\head-2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\head-3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\head-4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\legs-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\legs-2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\legs-3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\legs-4.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
