--- a/bestAPPever/bestAPPever.csproj
+++ b/bestAPPever/bestAPPever.csproj
@@ -85,13 +85,16 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\body-1.png" />
+    <None Include="Resources\arrowLeft.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\body-2.png" />
+    <None Include="Resources\arrowRight.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\body-3.png" />
+    <None Include="Resources\arrowRightTap.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\arrowLeftTap.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\body-4.png" />
@@ -119,6 +122,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\legs-4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\body-1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\body-2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\body-3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
