--- a/bestAPPever/bestAPPever.csproj
+++ b/bestAPPever/bestAPPever.csproj
@@ -48,11 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreateObjects.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormFirst.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormFirst.Designer.cs">
+      <DependentUpon>FormFirst.cs</DependentUpon>
     </Compile>
     <Compile Include="ListUsers.cs" />
     <Compile Include="RegLogInClass.cs" />
@@ -60,8 +60,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TamagochiEditor.cs" />
     <Compile Include="TamagochiStatus.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormFirst.resx">
+      <DependentUpon>FormFirst.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
