--- a/bestAPPever/bestAPPever.csproj
+++ b/bestAPPever/bestAPPever.csproj
@@ -55,6 +55,14 @@
       <DependentUpon>FormFirst.cs</DependentUpon>
     </Compile>
     <Compile Include="ListUsers.cs" />
+    <Compile Include="FormMessaging.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMessaging.Designer.cs">
+      <DependentUpon>FormMessaging.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MessagingClass.cs" />
+    <Compile Include="MessagingListener.cs" />
     <Compile Include="MySqlListener.cs" />
     <Compile Include="RegLogInClass.cs" />
     <Compile Include="Program.cs" />
@@ -63,6 +71,9 @@
     <Compile Include="TamagochiStatus.cs" />
     <EmbeddedResource Include="FormFirst.resx">
       <DependentUpon>FormFirst.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMessaging.resx">
+      <DependentUpon>FormMessaging.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
